--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ jwt.secret=XY7kmzoNzl100
 jwt.expiration.time=600
 jwt.token.prefix=Bearer
 jwt.header=Authorization
-jwt.signup.url=/api/register
+jwt.signup.url=/register
 jwt.signin.url=/login
 jwt.audience=web
