--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://db-users:3306/commerce?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.url=jdbc:mysql://db-users:3306/members?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.tomcat.max-wait=20000
@@ -20,7 +20,7 @@ spring.jackson.serialization.indent_output=true
 
 #Security configuration for JWT
 jwt.secret=XY7kmzoNzl100
-jwt.expiration.time=600
+jwt.expiration.time=6000
 jwt.token.prefix=Bearer
 jwt.header=Authorization
 jwt.signup.url=/register
