--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,9 @@ jwt.header=Authorization
 jwt.signup.url=/register
 jwt.signin.url=/login
 jwt.audience=web
+
+# Enable HTTPS section
+#server.ssl.key-store: users.p12
+#server.ssl.key-store-password: admin123
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: users
