Updated URLs and Cookie value due to Zuul service integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.jackson.serialization.indent_output=true
 
 #Security configuration for JWT
 jwt.secret=XY7kmzoNzl100
-jwt.expiration.time=6000
+#Expiry time in minutes
+jwt.expiration.time=30
 jwt.token.prefix=Bearer
 jwt.header=Authorization
 jwt.signup.url=/register
