--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name: hcs-users
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://db-users:3306/members?verifyServerCertificate=false&useSSL=false&requireSSL=false
@@ -33,3 +35,9 @@ jwt.audience=web
 #server.ssl.key-store-password: admin123
 #server.ssl.keyStoreType: PKCS12
 #server.ssl.keyAlias: users
+
+#Eureka client configuration
+eureka.client.registerWithEureka: true
+eureka.client.fetchRegistry: true
+eureka.client.serviceUrl.defaultZone: http://localhost:8001/eureka/
+eureka.instance.hostname: localhost
