--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,8 @@
 spring.application.name: hcs-users
 
+logging.file=SystemOut.log
+server.port=8080
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://db-users:3306/members?verifyServerCertificate=false&useSSL=false&requireSSL=false
