Changing eureka instance hostname for production

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,4 +43,4 @@ jwt.audience=web
 eureka.client.registerWithEureka: true
 eureka.client.fetchRegistry: true
 eureka.client.serviceUrl.defaultZone: http://hcs.orkutics.com:8001/eureka/
-eureka.instance.hostname: hcs.orkutics.com
+eureka.instance.hostname: hcs-users
